--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,7 @@ a {
 
 body {
 	font-family: 'Inter', sans-serif;
+	overflow-x: hidden;
 }
 
 
@@ -207,6 +208,8 @@ main {
 	color: #F7F7F7;
 }
 
+
+
 .about__content {
 
 	display: flex;
@@ -218,7 +221,7 @@ main {
 }
 
 .about__block_left {
-	padding-top:310px;
+	padding-top: 310px;
 	width: 428px;
 
 }
@@ -228,14 +231,14 @@ main {
 .block {
 
 	padding-left: 172px;
-	width:770px;
+	width: 770px;
 	font-weight: 300;
 }
 
 .block__title {
 	font-size: 90px;
 	text-transform: uppercase;
-	padding:43px 0px;
+	padding: 43px 0px;
 }
 
 .block__content {
@@ -244,28 +247,28 @@ main {
 }
 
 .block__content p {
-	margin:43px 0px;
+	margin: 43px 0px;
 }
 
-.info{
+.info {
 	font-size: 160px;
-	display:flex;
+	display: flex;
 	border-bottom: solid 1px #367848;
 	align-items: center;
-	
-	
+
+
 }
 
-.info__digit{
+.info__digit {
 	color: #367848;
 }
 
-.info__alpha{
+.info__alpha {
 	font-size: 14px;
 }
 
-.map{
+.map {
 	position: absolute;
 	z-index: -1;
-	left:400px;
+	left: 400px;
 }
